modules/network/public.tf
# Public Subnet for the EKS Cluster
resource "aws_subnet" "eks_pub_subnet_1a" {
  vpc_id                  = aws_vpc.eks_vpc.id
  cidr_block              = cidrsubnet(var.cidr_block, 8, 1) # Function to create a subnet within the CIDR Block
  availability_zone       = "${data.aws_region.current.id}a"
  map_public_ip_on_launch = true

  tags = merge(
    var.tags,
    {
      Name                     = "${var.project_name}-pub-subnet-1a"
      "kubernetes.io/role/elb" = "1"
    }
  )
}

resource "aws_subnet" "eks_pub_subnet_1b" {
  vpc_id                  = aws_vpc.eks_vpc.id
  cidr_block              = cidrsubnet(var.cidr_block, 8, 2) # Function to create a subnet within the CIDR Block
  availability_zone       = "${data.aws_region.current.id}b"
  map_public_ip_on_launch = true

  tags = merge(
    var.tags,
    {
      Name                     = "${var.project_name}-pub-subnet-1b"
      "kubernetes.io/role/elb" = "1"
    }
  )
}


# Associate the route table to public subnets
resource "aws_route_table_association" "eks_pub_rtb_assoc_1a" {
  subnet_id      = aws_subnet.eks_pub_subnet_1a.id
  route_table_id = aws_route_table.eks_public_route_table.id
}
resource "aws_route_table_association" "eks_pub_rtb_assoc_1b" {
  subnet_id      = aws_subnet.eks_pub_subnet_1b.id
  route_table_id = aws_route_table.eks_public_route_table.id
}
